syntax = "proto3";

package payment;

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentResponse);
}

message CreatePaymentRequest {
  string orderPublicId = 1;
  string method = 2;
  float totalAmount = 3;
  string currency = 4;
}

message CreatePaymentResponse {
  string paymentPublicId = 1;
  string status = 2;
}

